Fixed an error in the projects dropdown

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                           </li>
                           <li>
                               <a class="dropdown-item" href="/shiny-calculator">
-                                  Tax Estimator
+                                  Pokemon Shiny Calculator
                               </a>
                           </li>
                       </ul>
