--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <body class="bg-light d-flex flex-column min-vh-100 text-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript><nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="https://cstewart2010.github.io">
               Charles Stewart
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,17 +59,17 @@
                               </a>
                           </li>
                           <li>
-                              <a class="dropdown-item" href="verble.html">
+                              <a class="dropdown-item" href="https://cstewart2010.github.io/verble">
                                   Verble
                               </a>
                           </li>
                           <li>
-                              <a class="dropdown-item" href="taxEstimator.html">
+                              <a class="dropdown-item" href="https://cstewart2010.github.io/taxEstimator">
                                   Tax Estimator
                               </a>
                           </li>
                           <li>
-                              <a class="dropdown-item" href="/shiny-calculator">
+                              <a class="dropdown-item" href="https://cstewart2010.github.io/shiny-calculator">
                                   Pokemon Shiny Calculator
                               </a>
                           </li>
